--- a/index.html
+++ b/index.html
@@ -69,3 +69,51 @@
       <p><a href="https://en.wikipedia.org/wiki/Asian_lion">Learn more about Asian lions on Wikipedia</a></p>
     </article>
   </section
+      
+   <section>
+    <h2>Monkeys</h2>
+    <ul>
+      <li><a href="#cookie">Cookie</a></li>
+      <li><a href="#earl">Earl</a></li>
+      <li><a href="#banana-pudding">Banana Pudding</a></li>
+    </ul>
+    <article id="cookie">
+      <h3>Cookie</h3>
+      <img src="cookie.jpg" alt="Monkey Cookie">
+      <p>Cookie is a playful monkey who loves to swing from branches and interact with other monkeys. She eats fruits, nuts, and insects.</p>
+      <p><a href="https://en.wikipedia.org/wiki/Monkey">Learn more about monkeys on Wikipedia</a></p>
+    </article>
+    <article id="earl">
+      <h3>Earl</h3>
+      <img src="earl.jpg" alt="Monkey Earl">
+      <p>Earl is a shy monkey who likes to stay in the trees and observe his surroundings. He eats mainly fruits and insects.</p>
+      <p><a href="https://en.wikipedia.org/wiki/Monkey">Learn more about monkeys on Wikipedia</a></p>
+    </article>
+    <article id="banana-pudding">
+      <h3>Banana Pudding</h3>
+      <img src="banana-pudding.jpg" alt="Monkey Banana Pudding">
+      <p>Banana Pudding is a mischievous monkey who enjoys playing tricks on the other animals. She eats fruits, nuts, and insects.</p>
+      <p><a href="https://en.wikipedia.org/wiki/Monkey">Learn more about monkeys on Wikipedia</a></p>
+    </article>
+  </section>
+
+  <section>
+    <h2>Alligators</h2>
+    <ul>
+      <li><a href="#wren">Wren</a></li>
+      <li><a href="#aspen">Aspen</a></li>
+      <li><a href="#mika">Mika</a></li>
+    </ul>
+    <article id="wren">
+      <h3>Wren</h3>
+      <img src="wren.jpg" alt="Alligator Wren">
+      <p>Wren is a fierce alligator who loves to bask in the sun and hunt for prey. She eats fish, birds, and other small animals.</p>
+      <p><a href="https://en.wikipedia.org/wiki/American_alligator">Learn more about alligators on Wikipedia</a></p>
+    </article>
+    <article id="aspen">
+      <h3>Aspen</h3>
+      <img src="aspen.jpg" alt="Alligator Aspen">
+      <p>Aspen is a large alligator who enjoys swimming in the water and hiding among the reeds. He eats mainly fish and crustaceans.</p>
+      <p><a href="https://en.wikipedia.org/wiki/American_alligator">Learn more about alligators on Wikipedia</a></p>
+    </article>
+    <article id
