--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    
     <article>
       <h3>Ollie</h3>
-         <img src="https://www.biologicaldiversity.org/assets/img/species/mammals/GrizzlyBearRobinSilver.jpg" alt="Ollie grizzly bear">
+         <img src="https://www.biologicaldiversity.org/assets/img/species/mammals/GrizzlyBearRobinSilver.jpg" alt="Ollie grizzly bear" style="width: 50%; height: auto;">
          <p>Ollie is a grizzly bear who loves to swim and play with his toys. He needs a lot of space to move around, and he eats mainly fish and berries.</p>
          <p><a href="https://en.wikipedia.org/wiki/Grizzly_bear">Learn more about grizzly bears on Wikipedia</a></p>
     </article>
